correct spelling on <title>

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="refresh" content="3600">
-        <title>EHT Skylt</title>
+        <title>EHT-skylt</title>
 
         <link rel="stylesheet" href="assets/fontawesome-5.15.1/css/all.min.css">
         <link rel="stylesheet" href="assets/bootstrap-4.5.3/css/bootstrap.min.css">
