--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="assets/fontawesome-5.15.1/css/all.min.css">
         <link rel="stylesheet" href="assets/bootstrap-4.5.3/css/bootstrap.min.css">
+        <link rel='icon' href='assets/img/favicon/favicon.ico' type='image/x-icon'/ >
         <script src="assets/jquery-3.3.1.slim.min.js"></script>
         <script src="assets/popper.min.js"></script>
         <script src="assets/bootstrap-4.5.3/js/bootstrap.min.js"></script>
