Add tips functionallity (#10)

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -53,6 +53,7 @@
                 height: 375px;
                 width: 285;
                 max-width: 100%;
+                z-index: 2;
             }
 
             .name {
@@ -82,6 +83,16 @@
             .procivitas{
                 font-size: 40px;
                 background-image: linear-gradient(to right,#d8091a,#0161a5, transparent);
+            }
+
+            .tips {
+                z-index: -1;            
+                font-size: 1em;
+                padding: 5px;
+            }
+
+            .tips-text {
+                font-size: 0.6em;
             }
         </style>
     </head>
