--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -49,7 +49,7 @@
 
             .profile-image {
                 position:absolute;
-                left: 109px;
+                left: 25%;
                 height: 375px;
                 width: 285;
                 max-width: 100%;
@@ -59,6 +59,11 @@
             .name {
                 font-size: 40px;
                 background-image: linear-gradient(to right, #ab058b,#4e0568, transparent);
+            }
+
+            .name h2 {
+                margin-bottom: 3px;
+                margin-top: 3px;
             }
 
             .carousel-indicators li {
@@ -80,13 +85,14 @@
             {
                 font-weight: 100;
             }
+
             .procivitas{
                 font-size: 40px;
                 background-image: linear-gradient(to right,#d8091a,#0161a5, transparent);
             }
 
             .tips {
-                z-index: -1;            
+                z-index: -1;
                 font-size: 1em;
                 padding: 5px;
             }
