--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -39,6 +39,10 @@
                 margin-bottom: 50px;
             }
 
+            html, body {
+                overflow: hidden;
+            }
+
             body {
                 background-color:black;
                 margin: 25px;
