--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -104,6 +104,21 @@
             .tips-text {
                 font-size: 0.6em;
             }
+
+            .drop-in {
+                position: absolute;
+                top: 75px;
+                left: 0px;
+                width: 500px;
+            }
+
+            .drop-in h2 {
+                font-size: 30px;
+                margin-top: 3px;
+                margin-bottom: 3px;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
         </style>
     </head>
 
