--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -105,6 +105,9 @@
                 font-size: 0.6em;
             }
 
+            .important-date {
+            }
+
             .drop-in {
                 position: absolute;
                 top: 75px;
