Removed unused class and changed CSS slightly in important dates slide

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -105,7 +105,13 @@
                 font-size: 0.6em;
             }
 
-            .important-date {
+            .countdown-box p{
+                font-size: 23px;
+                padding-left: .5rem;
+            }
+
+            .countdown-box h2{
+                font-size: 28px;
             }
 
             .drop-in {
