--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -13,6 +13,7 @@
         <script src="assets/jquery-3.3.1.slim.min.js"></script>
         <script src="assets/popper.min.js"></script>
         <script src="assets/bootstrap-4.5.3/js/bootstrap.min.js"></script>
+        <script src="assets/countdown.js"></script>
     </head>
 
     <body>
