--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -14,6 +14,7 @@
         <script src="assets/popper.min.js"></script>
         <script src="assets/bootstrap-4.5.3/js/bootstrap.min.js"></script>
         <script src="assets/countdown.js"></script>
+        <script src="../../gs_code.js"></script>
     </head>
 
     <body>
