Add animated background

--- a/site/assets/style.css
+++ b/site/assets/style.css
@@ -5,11 +5,15 @@
 
 body {
   font-family: Soleto;
-  margin: 0;
   background-image: url(img/backgroundNTI.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+body, html {
+  margin: 0;
+  height: 100%;
 }
 
 .item {
