--- a/site/assets/animated-background.css
+++ b/site/assets/animated-background.css
@@ -4,7 +4,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    background-size: contain;
+    background-size: 80%;
     background-position: center;
     background-repeat: no-repeat;
     animation-duration: 8s;
@@ -17,30 +17,33 @@
 .background-layer-1 {
     background-image: url("/assets/img/background/layer_1.png");
     z-index: calc(-100 + 1);
+    animation-duration: 8s;
     animation-name: keyframes1;
 }
 
 .background-layer-2 {
     background-image: url("/assets/img/background/layer_2.png");
     z-index: calc(-100 + 2);
+    animation-duration: 10s;
     animation-name: keyframes2;
 }
 
 .background-layer-3 {
     background-image: url("/assets/img/background/layer_3.png");
     z-index: calc(-100 + 3);
+    animation-duration: 12s;
     animation-name: keyframes3;
 }
 
 @keyframes keyframes1 {
-    from { transform: translateX(0px); }
-    to { transform: translateX(-20px); }
+    from { transform: translateX(0); }
+    to { transform: translateX(2%); }
 }
-@keyframes keyframes1 {
-    from { transform: translateX(0px); }
-    to { transform: translateX(40px); }
+@keyframes keyframes2 {
+    from { transform: translateX(-2%); }
+    to { transform: translateX(3%); }
 }
-@keyframes keyframes1 {
-    from { transform: translateX(0px); }
-    to { transform: translateX(110px); }
+@keyframes keyframes3 {
+    from { transform: translateX(0); }
+    to { transform: translateX(8%); }
 }
