--- a/site/assets/style.css
+++ b/site/assets/style.css
@@ -5,15 +5,12 @@
 
 body {
   font-family: Soleto;
-  background-image: url(img/backgroundNTI.jpg);
+  margin: 0;
+  background-color: #1b002d;
+  /* background-image: url(img/backgroundNTI.jpg); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-}
-
-body, html {
-  margin: 0;
-  height: 100%;
 }
 
 .item {
