--- a/site/assets/animated-background.css
+++ b/site/assets/animated-background.css
@@ -10,26 +10,27 @@
     animation-direction: alternate;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
+    --animation-base-duration: 10s;
 }
 
 .background-layer-1 {
     background-image: url("/assets/img/background/layer_1.png");
     z-index: calc(-100 + 1);
-    animation-duration: 8s;
+    animation-duration: calc(var(--animation-base-duration) * 0.8);
     animation-name: keyframes1;
 }
 
 .background-layer-2 {
     background-image: url("/assets/img/background/layer_2.png");
     z-index: calc(-100 + 2);
-    animation-duration: 10s;
+    animation-duration: calc(var(--animation-base-duration));
     animation-name: keyframes2;
 }
 
 .background-layer-3 {
     background-image: url("/assets/img/background/layer_3.png");
     z-index: calc(-100 + 3);
-    animation-duration: 12s;
+    animation-duration: calc(var(--animation-base-duration) * 1.2);
     animation-name: keyframes3;
 }
 
