--- a/site/assets/style.css
+++ b/site/assets/style.css
@@ -38,7 +38,7 @@ body {
   height: 85%;
 }
 
-.grid-item-image > img {
+.grid-item-image>img {
   width: 95%;
   height: 100%;
   border-radius: 15px;
@@ -58,7 +58,7 @@ body {
   justify-content: flex-start;
 }
 
-.info > h1 {
+.info>h1 {
   font-size: 5em;
   padding: 0;
   margin: 0;
@@ -68,7 +68,7 @@ body {
   font-size: 3.5em;
 }
 
-.info > p { 
+.info>p {
   font-size: 3em;
 }
 
@@ -79,9 +79,9 @@ body {
 }
 
 .logo {
-  position: absolute; 
-  left: 15px; 
-  top: 25px;
+  position: absolute;
+  left: 15px;
+  top: 35px;
   color: white;
   font-size: 4em;
   display: flex;
@@ -89,7 +89,7 @@ body {
   align-items: center;
 }
 
-.logo > p {
+.logo>p {
   margin-left: -15px;
   display: flex;
   align-items: center;
@@ -97,6 +97,25 @@ body {
   padding: 0;
 }
 
-p > img {
+.logoright {
+  position: absolute;
+  right: 15px;
+  top: 35px;
+  color: white;
+  font-size: 4em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.logorigh>p {
+  margin-left: -15px;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+p>img {
   margin: 0 5px 7px 0;
 }
