--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="sv">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="refresh" content="3600" />
-        <title>EHT-skylt</title>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="3600" />
+    <title>EHT-skylt</title>
+    <link rel="stylesheet" href="assets/style.css" />
+    <link rel='icon' href='assets/img/favicon/favicon.ico' type='image/x-icon' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
+    <link rel="stylesheet" href="assets/style.css">
+</head>
 
-        <link rel="stylesheet" href="assets/fontawesome-5.15.1/css/all.min.css" />
-        <link rel="stylesheet" href="assets/bootstrap-4.5.3/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="assets/style.css" />
-        <link rel='icon' href='assets/img/favicon/favicon.ico' type='image/x-icon' />
-        <script src="assets/jquery-3.3.1.slim.min.js"></script>
-        <script src="assets/popper.min.js"></script>
-        <script src="assets/bootstrap-4.5.3/js/bootstrap.min.js"></script>
-        <script src="assets/countdown.js"></script>
-    </head>
-
-    <body>
-        {{ content }}
-    </body>
+<body>
+    {{ content }}
+</body>
 
 </html>
